# ggoldca

./: Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: audit.yml  build.yml
docs/: math.tex
programs/ggoldca/: Cargo.toml
programs/ggoldca/src/: error.rs  instructions.rs  interface.rs  interfaces.rs  lib.rs  macros.rs  math.rs  position.rs  state.rs
programs/ggoldca/src/instructions/: close_position.rs  collect_fees.rs  collect_fees_and_rewards.rs  collect_rewards.rs  deposit.rs  deposit_pool.rs  initialize_vault.rs  open_position.rs  rebalance.rs  reinvest.rs  sell_rewards.rs  set_market_rewards.rs  set_min_slots_for_reinvest.rs  set_token_metadata.rs  set_vault_fee.rs  set_vault_pause_status.rs  set_vault_ui_status.rs  swap.rs  swap_rewards.rs  transfer_rewards.rs  update_lp_price.rs  withdraw.rs  withdraw_pool.rs  x.sh
programs/ggoldca/src/interfaces/: orca_swap_v2.rs  whirlpool_position.rs
programs/ggoldca/src/math/: lp_price.rs  mul_div.rs  safe_arithmetics.rs
sdk/: .eslintrc.json  package.json  tsconfig.json
sdk/src/: fetcher.ts  pda.ts  program.ts
sdk/src/idl/: ggoldca.json
tests/: ggoldca.ts
tests/accounts/: 51C35yS12BEvDmcLAV2DDt3oAcQxP5dQUpnihE2ZABMo.json  CL6TVscze5qrzhb9vJjydDWxj8dB2kj5YUAK5j1s2cAW.json  HDG.json  HUBBLE.json  ORCA.json  USDC.json  USDH.json  USH.json  test-keypair.json
tests/ggoldca/: Test.toml  ggoldca.ts
tests/swap_rewards/: Test.toml  swapRewards.ts
