[package]
name = "ggoldca"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ggoldca"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-spl = "0.25.0"
anchor-lang = "0.25.0"
anchor-lang-for-whirlpool = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", version = "0.20.1", package = "anchor-lang" }
whirlpool = { git = "https://github.com/orca-so/whirlpools", features = ["cpi"] }
