[package]
name = "ggoldca"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ggoldca"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-spl = "0.24.2"
anchor-lang = "0.24.2"
anchor-lang-for-whirlpool = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", version = "0.20.1", package = "anchor-lang" }
whirlpool = { git = "https://github.com/orca-so/whirlpools", features = ["cpi"] }
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
mpl-token-metadata = {version = "1.2.5", features = ["no-entrypoint"]}